🐞 fix: authors, universities, demos

--- a/index.html
+++ b/index.html
@@ -89,36 +89,53 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">AC-DiT: Adaptive Coordination Diffusion Transformer for Mobile Manipulation</h1>
-          <div class="is-size-5 publication-authors">
+          <!-- <div class="is-size-5 publication-authors">
             <span class="author-block">
               <strong>Anonymous Author(s)</strong></span>
+          </div> -->
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">
+              <a href="https://cscsx.github.io/">Sixiang Chen</a><sup>1,4*</sup>,</span>
+            <span class="author-block">
+              <a href="https://liujiaming1996.github.io/">Jiaming Liu</a><sup>1*</sup>,</span>
+            <span class="author-block">
+              <a href="https://siriyep.github.io/">Siyuan Qian</a><sup>1,4*</sup>,
+            </span>
+            <span class="author-block">
+              Han Jiang<sup>2</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://clorislili.github.io/clorisLi/">Xiaoqi Li</a><sup>1</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://zrrskywalker.github.io/">Renrui Zhang</a><sup>3</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://zhuoyangliu2005.github.io/">Zhuoyang Liu</a><sup>1</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://gaystarc.github.io/">Chenyang Gu</a><sup>1,4</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://jackhck.github.io/">Chengkai Hou</a><sup>1,4</sup>,
+            </span>
+            <span class="author-block">
+              Pengwei Wang<sup>4</sup>,
+            </span>
+            <span class="author-block">
+              Zhongyuan Wang<sup>4</sup>,
+            </span>
+            <span class="author-block">
+              <a href="https://www.shanghangzhang.com">Shanghang Zhang</a><sup>1,4</sup>
+            </span>
           </div>
-          <!-- <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
-            <span class="author-block">
-              <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
-            </span>
-            <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
-            </span>
-          </div> -->
 
-          <!-- <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
-          </div> -->
+          <div class="is-size-6 publication-authors">
+            <span class="author-block"><sup>1</sup>State Key Laboratory of Multimedia Information Processing, School of Computer Science, Peking University,</span>
+            <span class="author-block"><sup>2</sup>Nanjing University (NJU),</span>
+            <span class="author-block"><sup>3</sup>The Chinese University of Hong Kong (CUHK),</span>
+            <span class="author-block"><sup>4</sup>Beijing Academy of Artificial Intelligence (BAAI)</span>
+          </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
@@ -185,7 +202,7 @@
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered has-text-centered">
-        <h2 class="title is-3">Demostrations</h2>
+        <h2 class="title is-3">Demonstrations (Task1 & Task2)</h2>
       </div>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
@@ -218,6 +235,19 @@
                     type="video/mp4">
           </video>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered has-text-centered">
+        <h2 class="title is-3">Demonstrations (Task3 & Task4)</h2>
+      </div>
+      <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/Towel_1/Towel_1-1.mp4"
