--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               Han Jiang<sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://clorislili.github.io/clorisLi/">Xiaoqi Li</a><sup>1</sup>,
+              <a href="https://clorislili.github.io/clorisLi/">Lily Li</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://zrrskywalker.github.io/">Renrui Zhang</a><sup>3</sup>,
