✨ feat: add BibTex

--- a/index.html
+++ b/index.html
@@ -426,17 +426,20 @@
 </div> -->
 
 
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@misc{chen2025acditadaptivecoordinationdiffusion,
+      title={AC-DiT: Adaptive Coordination Diffusion Transformer for Mobile Manipulation}, 
+      author={Sixiang Chen and Jiaming Liu and Siyuan Qian and Han Jiang and Lily Li and Renrui Zhang and Zhuoyang Liu and Chenyang Gu and Chengkai Hou and Pengwei Wang and Zhongyuan Wang and Shanghang Zhang},
+      year={2025},
+      eprint={2507.01961},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2507.01961}, 
 }</code></pre>
   </div>
-</section> -->
+</section>
 
 
 <!-- <footer class="footer">
